移除無用的符號

--- a/OEBPS/Text/000.htm
+++ b/OEBPS/Text/000.htm
@@ -43,13 +43,13 @@
 	諸家註釋，雖見名氏，至於爵裡，頗或難知。傳無所存，具列如左：
 </p>
 <p>
-	荀悅字仲豫，潁川人，後漢秘書監。<span class="style7">【撰《漢紀》三十卷，其事皆出《漢書》。】</span>
+	荀悅字仲豫，潁川人，後漢秘書監。<span class="style7">撰《漢紀》三十卷，其事皆出《漢書》。</span>
 </p>
 <p>
-	服虔字子慎，滎陽人，後漢尚書侍郎，高平令，九江太守。<span class="style7">【初名重，改名祗，後定名虔。】</span>
+	服虔字子慎，滎陽人，後漢尚書侍郎，高平令，九江太守。<span class="style7">初名重，改名祗，後定名虔。</span>
 </p>
 <p>
-	應劭字仲援，<span class="style7">【一字仲援，一字仲遠。】</span>汝南南頓人，後漢蕭令，御史營令，泰山太守。
+	應劭字仲援，<span class="style7">一字仲援，一字仲遠。</span>汝南南頓人，後漢蕭令，御史營令，泰山太守。
 </p>
 <p>
 	伏儼字景宏，琅邪人。
@@ -73,7 +73,7 @@
 	文穎字叔良，南陽人，後漢末荊州從事，魏建安中爲甘陵府丞。
 </p>
 <p>
-	張揖字稚讓，清河人，<span class="style7">【一云河間人。】</span>魏太和中爲博士。<span class="style7">【止解《司馬相如傳》一卷。】</span>
+	張揖字稚讓，清河人，<span class="style7">一云河間人。</span>魏太和中爲博士。<span class="style7">止解《司馬相如傳》一卷。</span>
 </p>
 <p>
 	蘇林字孝友，陳留外黃人，魏給事中領秘書監，散騎常侍，永安衛尉，太中大夫，黃初中遷博士，封安成亭侯。
@@ -97,19 +97,19 @@
 	晉灼，河南人，晉尚書郎。
 </p>
 <p>
-	劉寶字道真，高平人，晉中書郎，河內太守，御史中丞，太子中庶子，吏部郎，安北將軍。<span class="style7">【侍皇太子講《漢書》，別有《駁義》。】</span>
+	劉寶字道真，高平人，晉中書郎，河內太守，御史中丞，太子中庶子，吏部郎，安北將軍。<span class="style7">侍皇太子講《漢書》，別有《駁義》。</span>
 </p>
 <p>
 	臣瓚，不詳姓氏及郡縣。
 </p>
 <p>
-	郭璞字景純，河東人，晉贈弘農太守。<span class="style7">【止註《相如傳序》及遊獵詩賦。】</span>
+	郭璞字景純，河東人，晉贈弘農太守。<span class="style7">止註《相如傳序》及遊獵詩賦。</span>
 </p>
 <p>
 	蔡謨字道明，陳留考城人，東晉侍中五兵尚書，太常領秘書監，都督徐、兗、青三州諸軍事，領徐州刺史，左光祿大夫開府儀同三司，領揚州牧，侍中司徒不拜，贈侍中司空，謚文穆公。
 </p>
 <p>
-	崔浩字伯深，清河人，後魏侍中特進撫軍大將軍，左光祿大夫，司徒，封東郡公。<span class="style7">【撰荀悅《漢紀》音義。】</span>
+	崔浩字伯深，清河人，後魏侍中特進撫軍大將軍，左光祿大夫，司徒，封東郡公。<span class="style7">撰荀悅《漢紀》音義。</span>
 </p>
 </div>
 <!-- end .main --></div>
