--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <ul class="level1">
 
-    <li><a href="OEBPS/Text/a02.htm">漢書</a></li>
+    <li><a href="OEBPS/Text/a02.htm">前言</a></li>
 
     <li><a href="OEBPS/Text/000.htm">漢書敍例</a></li>
 
