--- a/OEBPS/Text/000.htm
+++ b/OEBPS/Text/000.htm
@@ -15,10 +15,10 @@
 	儲君體上哲之姿，膺守器之重，俯降三善，博綜九流，觀炎漢之餘風，究其終始，懿孟堅之述作，嘉其宏贍，以爲服、應曩說疏紊尚多，蘇、晉眾家剖斷蓋砂，蔡氏纂集尤爲牴牾，自茲以降，蔑足有云。悵前代之未周，愍將來之多惑，顧召幽仄，俾竭芻蕘，匡正睽違，激揚郁滯，將以博喻胄齒，遠覃邦國，弘敷錦帶，啟導青衿。曲稟宏規，備蒙嘉惠，增榮改觀，重價流聲。斗筲之材，徒思罄力；駑蹇之足，終慚遠致。歲在重光，律中大呂，是謂塗月，其書始就。不恥狂簡，輒用上聞，粗陳指例，式存揚搉。
 </p>
 <p id="p1"><a class="gg-link" href="#p1" onclick="return changeColor(this);"></a>
-	《漢書》舊無註解，唯服虔、應劭等各爲音義，自別施行。至典午中朝，爰有晉灼，集爲一部，凡十四卷，又頗以意增益，時辯前人當否，號曰《漢書集註》。屬永嘉喪亂，金行播遷，此書雖存，不至江左。是以爰自東晉迄於梁、陳，南方學者皆弗之見。有臣瓚者，莫知氏族，考其時代，亦在晉初，又總集諸家音義，稍以己之所見，續廁其末，舉駁前說，喜引《竹書》，自謂甄明，非無差爽，凡二十四卷，分爲兩帙。今之《集解音義》則是其書，而後人見者不知臣瓚所作，乃謂之應劭等《集解》。王氏《七誌》，阮氏《七錄》，並題云然，斯不審耳。學者又斟酌瓚姓，附著安施，或云傅族，既無明文，未足取信。蔡謨全取臣瓚一部散入《漢書》，自此以來始有註本。但意浮功淺，不加隱括，屬輯乖舛，錯亂實多，或乃離析本文，隔其辭句，穿鑿妄起。職此之由，與未注之前大不同矣。謨亦有兩三處錯意，然於學者竟無弘益。
+	<span class="shu-ming">漢書</span>舊無註解，唯服虔、應劭等各爲音義，自別施行。至典午中朝，爰有晉灼，集爲一部，凡十四卷，又頗以意增益，時辯前人當否，號曰<span class="shu-ming">漢書集註</span>。屬永嘉喪亂，金行播遷，此書雖存，不至江左。是以爰自東晉迄於梁、陳，南方學者皆弗之見。有臣瓚者，莫知氏族，考其時代，亦在晉初，又總集諸家音義，稍以己之所見，續廁其末，舉駁前說，喜引<span class="shu-ming">竹書</span>，自謂甄明，非無差爽，凡二十四卷，分爲兩帙。今之<span class="shu-ming">集解音義</span>則是其書，而後人見者不知臣瓚所作，乃謂之應劭等<span class="shu-ming">集解</span>。王氏<span class="shu-ming">七誌</span>，阮氏<span class="shu-ming">七錄</span>，並題云然，斯不審耳。學者又斟酌瓚姓，附著安施，或云傅族，既無明文，未足取信。蔡謨全取臣瓚一部散入<span class="shu-ming">漢書</span>，自此以來始有註本。但意浮功淺，不加隱括，屬輯乖舛，錯亂實多，或乃離析本文，隔其辭句，穿鑿妄起。職此之由，與未注之前大不同矣。謨亦有兩三處錯意，然於學者竟無弘益。
 </p>
 <p id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>
-	《漢書》舊文多有古字，解說之後屢經遷易，後人習讀，以意刊改，傳寫既多，彌更淺俗。今則曲核古本，歸其真正，一往難識者，皆從而釋之。
+	<span class="shu-ming">漢書</span>舊文多有古字，解說之後屢經遷易，後人習讀，以意刊改，傳寫既多，彌更淺俗。今則曲核古本，歸其真正，一往難識者，皆從而釋之。
 </p>
 <p id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>
 	古今異言，方俗殊語，未學膚受，或未能通，意有所疑，輒就增損，流遁忘返，穢濫實多。今皆刪削，克復其舊。
@@ -30,7 +30,7 @@
 	禮樂歌詩，各依當時律呂，修短有節，不可格以恆例。讀者茫昧，無復識其斷章，解者支離，又乃錯其句韻，遂使一代文采，空韞精奇，累葉鑽求，罕能通習。今並隨其曲折，剖判義理，歷然易曉，更無疑滯，可得諷誦，開心順耳。
 </p>
 <p id="p6"><a class="gg-link" href="#p6" onclick="return changeColor(this);"></a>
-	凡舊注是者，則無間然，具而存之，以示不隱。其有指趣略舉，結約未伸，衍而通之，使皆備悉。至於詭文僻見，越理亂真，匡而矯之，以祛惑蔽。若泛說非當，蕪辭競逐，苟出異端，徒爲煩冗，祗穢篇籍，蓋無取焉。舊所闕漏，未嘗解說，普更詳釋，無不洽通。上考典謨，旁究《蒼》《雅》，非苟臆說，皆有援據。六藝殘缺，莫睹全文，各自名家，揚鑣分路。是以向、歆、班、馬、仲舒、子云所引諸經或有殊異，與近代儒者訓義弗同，不可追駁前賢，妄指瑕，曲從後說，苟會扃塗。今則各依本文，敷暢厥指，非不考練，理固宜然，亦猶康成註《禮》，與其《書》、《易》相偝，元凱解《傳》，無系毛、鄭《詩》文。以類而言，其意可了。愛自陳、項，以訖哀、平，年載既多，綜緝斯廣，所以紀傳表志時有不同，當由筆削未休，尚遺秕稗，亦爲後人傳授，先後錯雜，隨手率意，遂有乖張。今智窮波討源，構會甄釋。
+	凡舊注是者，則無間然，具而存之，以示不隱。其有指趣略舉，結約未伸，衍而通之，使皆備悉。至於詭文僻見，越理亂真，匡而矯之，以祛惑蔽。若泛說非當，蕪辭競逐，苟出異端，徒爲煩冗，祗穢篇籍，蓋無取焉。舊所闕漏，未嘗解說，普更詳釋，無不洽通。上考典謨，旁究<span class="shu-ming">蒼</span><span class="shu-ming">雅</span>，非苟臆說，皆有援據。六藝殘缺，莫睹全文，各自名家，揚鑣分路。是以向、歆、班、馬、仲舒、子云所引諸經或有殊異，與近代儒者訓義弗同，不可追駁前賢，妄指瑕，曲從後說，苟會扃塗。今則各依本文，敷暢厥指，非不考練，理固宜然，亦猶康成註<span class="shu-ming">禮</span>，與其<span class="shu-ming">書</span>、<span class="shu-ming">易</span>相偝，元凱解<span class="shu-ming">傳</span>，無系毛、鄭<span class="shu-ming">詩</span>文。以類而言，其意可了。愛自陳、項，以訖哀、平，年載既多，綜緝斯廣，所以紀傳表志時有不同，當由筆削未休，尚遺秕稗，亦爲後人傳授，先後錯雜，隨手率意，遂有乖張。今智窮波討源，構會甄釋。
 </p>
 <p id="p7"><a class="gg-link" href="#p7" onclick="return changeColor(this);"></a>
 	字或難識，兼有借音，義指所由，不可暫闕。若更求諸別卷，終恐廢於披覽。今則各於其下，隨即翻音。至如常用可知，不涉疑昧者，眾所共曉，無煩翰墨。
@@ -42,7 +42,7 @@
 	諸家註釋，雖見名氏，至於爵裡，頗或難知。傳無所存，具列如左：
 </p>
 <p id="p10"><a class="gg-link" href="#p10" onclick="return changeColor(this);"></a>
-	荀悅字仲豫，潁川人，後漢秘書監。<span class="style7">撰《漢紀》三十卷，其事皆出《漢書》。</span>
+	荀悅字仲豫，潁川人，後漢秘書監。<span class="style7">撰<span class="shu-ming">漢紀</span>三十卷，其事皆出<span class="shu-ming">漢書</span>。</span>
 </p>
 <p id="p11"><a class="gg-link" href="#p11" onclick="return changeColor(this);"></a>
 	服虔字子慎，滎陽人，後漢尚書侍郎，高平令，九江太守。<span class="style7">初名重，改名祗，後定名虔。</span>
@@ -57,7 +57,7 @@
 	劉德，北海人。
 </p>
 <p id="p15"><a class="gg-link" href="#p15" onclick="return changeColor(this);"></a>
-	鄭氏，晉灼《音義》序云不知其名，而臣瓚《集解》輒云鄭德。既無所據，今依晉灼但稱鄭氏耳。
+	鄭氏，晉灼<span class="shu-ming">音義</span>序云不知其名，而臣瓚<span class="shu-ming">集解</span>輒云鄭德。既無所據，今依晉灼但稱鄭氏耳。
 </p>
 <p id="p16"><a class="gg-link" href="#p16" onclick="return changeColor(this);"></a>
 	李斐，不詳所出郡縣。
@@ -72,7 +72,7 @@
 	文穎字叔良，南陽人，後漢末荊州從事，魏建安中爲甘陵府丞。
 </p>
 <p id="p20"><a class="gg-link" href="#p20" onclick="return changeColor(this);"></a>
-	張揖字稚讓，清河人，<span class="style7">一云河間人。</span>魏太和中爲博士。<span class="style7">止解《司馬相如傳》一卷。</span>
+	張揖字稚讓，清河人，<span class="style7">一云河間人。</span>魏太和中爲博士。<span class="style7">止解<span class="shu-ming">司馬相如傳</span>一卷。</span>
 </p>
 <p id="p21"><a class="gg-link" href="#p21" onclick="return changeColor(this);"></a>
 	蘇林字孝友，陳留外黃人，魏給事中領秘書監，散騎常侍，永安衛尉，太中大夫，黃初中遷博士，封安成亭侯。
@@ -96,19 +96,19 @@
 	晉灼，河南人，晉尚書郎。
 </p>
 <p id="p28"><a class="gg-link" href="#p28" onclick="return changeColor(this);"></a>
-	劉寶字道真，高平人，晉中書郎，河內太守，御史中丞，太子中庶子，吏部郎，安北將軍。<span class="style7">侍皇太子講《漢書》，別有《駁義》。</span>
+	劉寶字道真，高平人，晉中書郎，河內太守，御史中丞，太子中庶子，吏部郎，安北將軍。<span class="style7">侍皇太子講<span class="shu-ming">漢書</span>，別有<span class="shu-ming">駁義</span>。</span>
 </p>
 <p id="p29"><a class="gg-link" href="#p29" onclick="return changeColor(this);"></a>
 	臣瓚，不詳姓氏及郡縣。
 </p>
 <p id="p30"><a class="gg-link" href="#p30" onclick="return changeColor(this);"></a>
-	郭璞字景純，河東人，晉贈弘農太守。<span class="style7">止註《相如傳序》及遊獵詩賦。</span>
+	郭璞字景純，河東人，晉贈弘農太守。<span class="style7">止註<span class="shu-ming">相如傳序</span>及遊獵詩賦。</span>
 </p>
 <p id="p31"><a class="gg-link" href="#p31" onclick="return changeColor(this);"></a>
 	蔡謨字道明，陳留考城人，東晉侍中五兵尚書，太常領秘書監，都督徐、兗、青三州諸軍事，領徐州刺史，左光祿大夫開府儀同三司，領揚州牧，侍中司徒不拜，贈侍中司空，謚文穆公。
 </p>
 <p id="p32"><a class="gg-link" href="#p32" onclick="return changeColor(this);"></a>
-	崔浩字伯深，清河人，後魏侍中特進撫軍大將軍，左光祿大夫，司徒，封東郡公。<span class="style7">撰荀悅《漢紀》音義。</span>
+	崔浩字伯深，清河人，後魏侍中特進撫軍大將軍，左光祿大夫，司徒，封東郡公。<span class="style7">撰荀悅<span class="shu-ming">漢紀</span>音義。</span>
 </p>
 </div>
 <!-- end .main --></div>
