--- a/OEBPS/Text/a02.htm
+++ b/OEBPS/Text/a02.htm
@@ -11,7 +11,7 @@
 <div class="feature">
 　　<h1>前言</h1>
 <hr/>
-<p id="p0"><a class="gg-link" href="#p0" onclick="return changeColor(this);"></a>東漢班固撰。固父班彪，以史記自武帝太初以後，闕而不錄，於是作後傳六十五篇。固以其父所續未詳，又綴集所聞，整理補充，以撰漢書；後因竇憲事被捕，死於獄中，全書未竟。和帝詔固妹昭就東觀藏書續成之。全書分十二紀、八表、十志、七十列傳共百篇，後人分爲一百二十卷，記載自劉邦（高祖）元年至王莽地皇四年二百三十年間主要事迹。爲我國第一部紀傳體斷代史。本書多用古字，向稱難讀。漢以後注者數十家，通行者爲唐顔師古注本，共一百二十卷。清王先謙補注一百卷，採輯尤詳。近人楊樹達著漢書窺管，對王氏補注，復有所補正。</p>
+<p id="p0"><a class="gg-link" href="#p0" onclick="return changeColor(this);"></a>東漢班固撰。固父班彪，以<span class="shu-ming">史記</span>自武帝太初以後，闕而不錄，於是作後傳六十五篇。固以其父所續未詳，又綴集所聞，整理補充，以撰<span class="shu-ming">漢書</span>；後因竇憲事被捕，死於獄中，全書未竟。和帝詔固妹昭就東觀藏書續成之。全書分十二紀、八表、十志、七十列傳共百篇，後人分爲一百二十卷，記載自劉邦（高祖）元年至王莽地皇四年二百三十年間主要事迹。爲我國第一部紀傳體斷代史。本書多用古字，向稱難讀。漢以後注者數十家，通行者爲唐顔師古注本，共一百二十卷。清王先謙<span class="shu-ming">補注</span>一百卷，採輯尤詳。近人楊樹達著<span class="shu-ming">漢書窺管</span>，對王氏<span class="shu-ming">補注</span>，復有所補正。</p>
 <p id="p1"><a class="gg-link" href="#p1" onclick="return changeColor(this);"></a>摘自<span class="shu-ming">辭源第三版</span>釋義。</p>
 </div>
 <!-- end .main --></div>
