替换部分图片字

--- a/OEBPS/Text/030.htm
+++ b/OEBPS/Text/030.htm
@@ -315,7 +315,7 @@
 <p id="p42"><a class="gg-link" href="#p42" onclick="return changeColor(this);"></a>　　<strong>右從橫十二家，百七篇。</strong></p>
 <p id="p43"><a class="gg-link" href="#p43" onclick="return changeColor(this);"></a>從橫家者流，蓋出於行人之官。孔子曰：「誦詩三百，使於四方，不能顓對，雖多亦奚以為？」<span class="style7">師古曰：「論語載孔子之言也。謂人不達於事，誦詩雖多，亦無所用。」</span>又曰：「使乎，使乎！」<span class="style7">師古曰：「亦論語載孔子之言，歎使者之難其人。」</span>言其當權事制宜，受命而不受辭，此其所長也。及邪人為之，則上詐諼而弃其信。<span class="style7">師古曰：「諼，詐言也，音許遠反。」</span></p>
 <p id="p44"><a class="gg-link" href="#p44" onclick="return changeColor(this);"></a>孔甲盤盂二十六篇。<span class="style7">黃帝之史，或曰夏帝孔甲，似皆非。</span><br/>
-                          大<img alt="1093" src="../Images/1093.jpg"/>三十七篇。<span class="style7">傳言禹所作，其文似後世語。師古曰：「<img alt="1093" src="../Images/1093.jpg"/>，古禹字。」</span><br/>
+                          大󱻀三十七篇。<span class="style7">傳言禹所作，其文似後世語。師古曰：「󱻀，古禹字。」</span><br/>
                           五子胥八篇。<span class="style7">名員，春秋時為吳將，忠直遇讒死。</span><br/>
                           子晚子三十五篇。<span class="style7">齊人，好議兵，與司馬法相似。</span><br/>
                           由余三篇。<span class="style7">戎人，秦穆公聘以為大夫。</span><br/>
@@ -364,7 +364,7 @@
                           百家百三十九卷。</p>
 <p id="p51"><a class="gg-link" href="#p51" onclick="return changeColor(this);"></a>　　<strong>右小說十五家，千三百八十篇。</strong></p>
 <p id="p52"><a class="gg-link" href="#p52" onclick="return changeColor(this);"></a>小說家者流，蓋出於稗官。<span class="style7">如淳曰：「稗音鍛家排。九章『細米為稗』。街談巷說，其細碎之言也。王者欲知閭巷風俗，故立稗官使稱說之。今世亦謂偶語為稗。」師古曰：「稗音稊稗之稗，不與鍛排同也。稗官，小官。漢名臣奏唐林請省置吏，公卿大夫至都官稗官各減什三，是也。」</span>街談巷語，道聽塗說者之所造也。孔子曰：「雖小道，必有可觀者焉，致遠恐泥，是以君子弗為也。」<span class="style7">師古曰：「論語載孔子之言。泥，滯也，音乃細反。」</span>然亦弗滅也。閭里小知者之所及，亦使綴而不忘。如或一言可采，此亦芻蕘狂夫之議也。</p>
-<p id="p53"><a class="gg-link" href="#p53" onclick="return changeColor(this);"></a>　　<strong>凡諸子百八十九家，四千三百二十四篇。</strong><span class="style7">出蹴<img alt="2933d" src="../Images/2933d.gif"/>一家，二十五篇。</span></p>
+<p id="p53"><a class="gg-link" href="#p53" onclick="return changeColor(this);"></a>　　<strong>凡諸子百八十九家，四千三百二十四篇。</strong><span class="style7">出蹴𩌽一家，二十五篇。</span></p>
 <p id="p54"><a class="gg-link" href="#p54" onclick="return changeColor(this);"></a>諸子十家，其可觀者九家而已。皆起於王道旣微，諸侯力政，時君世主，好惡殊方，<span class="style7">師古曰：「好音呼到反。惡音一故反。」</span>是以九家之術蠭出並作，<span class="style7">師古曰：「蠭與鋒同。」</span>各引一端，崇其所善，以此馳說，取合諸侯。其言雖殊，辟猶水火，相滅亦相生也。<span class="style7">師古曰：「辟讀曰譬。」</span>仁之與義，敬之與和，相反而皆相成也。易曰：「天下同歸而殊塗，一致而百慮。」<span class="style7">師古曰：「下繫之辭。」</span>今異家者各推所長，窮知究慮，以明其指，雖有蔽短，合其要歸，亦六經之支與流裔。<span class="style7">師古曰：「裔，衣末也。其於六經，如水之下流，衣之末裔。」</span>使其人遭明王聖主，得其所折中，皆股肱之材已。<span class="style7">師古曰：「已，語終辭。」</span>仲尼有言：「禮失而求諸野。」<span class="style7">師古曰：「言都邑失禮，則於外野求之，亦將有獲。」</span>方今去聖乆遠，道術缺廢，無所更索，<span class="style7">師古曰：「索，求也。」</span>彼九家者，不猶瘉於野乎？<span class="style7">師古曰：「瘉與愈同。愈，勝也。」</span>若能修六蓺之術，而觀此九家之言，舍短取長，則可以通萬方之略矣。<span class="style7">師古曰：「舍，廢也。」</span></p>
 <p id="p55"><a class="gg-link" href="#p55" onclick="return changeColor(this);"></a>屈原賦二十五篇。<span class="style7">楚懷王大夫，有列傳。</span><br/>
                           唐勒賦四篇。<span class="style7">楚人。</span><br/>
