完全移除圖片字

--- a/OEBPS/Text/006.htm
+++ b/OEBPS/Text/006.htm
@@ -54,7 +54,7 @@
 <p id="p41"><a class="gg-link" href="#p41" onclick="return changeColor(this);"></a>秋，作明堂于泰山下。</p>
 <p id="p42"><a class="gg-link" href="#p42" onclick="return changeColor(this);"></a>遣樓船將軍楊僕、左將軍荀彘將應募罪人擊朝鮮。<span class="style7">應劭曰：「樓船者，時欲擊越，非水不至，故作大船，上施樓也。」</span>又遣將軍郭昌、中郎將衞廣發巴蜀兵平西南夷未服者，以為益州郡。</p>
 <p id="p43"><a class="gg-link" href="#p43" onclick="return changeColor(this);"></a>三年春，作角抵戲，<span class="style7">應劭曰：「角者，角技也。抵者，相抵觸也。」文穎曰：「名此樂為角抵者，兩兩相當角力，角技藝射御，故名角抵，蓋雜技樂也。巴俞戲、魚龍蔓延之屬也。漢後更名平樂觀。」師古曰：「抵者，當也。非謂抵觸。文說是也。」</span>三百里內皆觀。</p>
-<p id="p44"><a class="gg-link" href="#p44" onclick="return changeColor(this);"></a>夏，朝鮮斬其王右渠降，<span class="style7">師古曰：「右渠，朝鮮王名。」</span>以其地為樂浪、臨屯、玄菟、真番郡。<span class="style7">臣瓚曰：「茂陵書臨屯郡治東<img alt="1007" src="../Images/1007.gif"/>縣，去長安六千一百三十八里，十五縣；真番郡治霅縣，去長安七千六百四十里，十五縣。」師古曰：「樂音洛。浪音郎。番音普安反。<img alt="1007" src="../Images/1007.gif"/>音弋支反。霅音丈甲反。」</span></p>
+<p id="p44"><a class="gg-link" href="#p44" onclick="return changeColor(this);"></a>夏，朝鮮斬其王右渠降，<span class="style7">師古曰：「右渠，朝鮮王名。」</span>以其地為樂浪、臨屯、玄菟、真番郡。<span class="style7">臣瓚曰：「茂陵書臨屯郡治東󿘟縣，去長安六千一百三十八里，十五縣；真番郡治霅縣，去長安七千六百四十里，十五縣。」師古曰：「樂音洛。浪音郎。番音普安反。󿘟音弋支反。霅音丈甲反。」</span></p>
 <p id="p45"><a class="gg-link" href="#p45" onclick="return changeColor(this);"></a>樓船將軍楊僕坐失亡多，免為庶民，左將軍荀彘坐爭功棄市。<span class="style7">師古曰：「棄市，殺之於市也。解在景紀。」</span></p>
 <p id="p46"><a class="gg-link" href="#p46" onclick="return changeColor(this);"></a>秋七月，膠西王端薨。</p>
 <p id="p47"><a class="gg-link" href="#p47" onclick="return changeColor(this);"></a>武都氐人反，分徙酒泉郡。<span class="style7">師古曰：「不盡徙。」</span></p>
