--- a/OEBPS/Text/015b.htm
+++ b/OEBPS/Text/015b.htm
@@ -33,8 +33,8 @@
 <td>六安共王子。</td>
 <td>始元五年六月辛丑封，二十二年薨。</td>
 <td>神爵二年，共侯始嗣。</td>
-<td>頃侯<img alt="1088" src="../Images/1088.gif"/>嗣 。
-                            <p class="style7" id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>師古曰：「<img alt="1088" src="../Images/1088.gif"/>音干涉反。」</p></td>
+<td>頃侯󿘧嗣 。
+                            <p class="style7" id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>師古曰：「󿘧音干涉反。」</p></td>
 <td>侯均嗣。王莽篡位，絕者凡百八十一人。
                                 <p class="style7" id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>師古曰：「此下言免絕者皆是也。」</p></td>
 <td>　</td>
