--- a/OEBPS/Text/000.htm
+++ b/OEBPS/Text/000.htm
@@ -8,8 +8,8 @@
 <div class="gridContainer clearfix">
 <div id="Main"><div class="main">
 <div class="feature"><h1>漢書敍例</h1>
-　　<span class="style11">唐正議大夫行秘書少監琅邪縣開國子　顏師古 撰</span>
 <hr/>
+<h2>唐正議大夫行秘書少監琅邪縣開國子　顏師古 撰</h2>
 <p id="p0"><a class="gg-link" href="#p0" onclick="return changeColor(this);"></a>
 	儲君體上哲之姿，膺守器之重，俯降三善，博綜九流，觀炎漢之餘風，究其終始，懿孟堅之述作，嘉其宏贍，以爲服、應曩說疏紊尚多，蘇、晉眾家剖斷蓋砂，蔡氏纂集尤爲牴牾，自茲以降，蔑足有云。悵前代之未周，愍將來之多惑，顧召幽仄，俾竭芻蕘，匡正睽違，激揚郁滯，將以博喻胄齒，遠覃邦國，弘敷錦帶，啟導青衿。曲稟宏規，備蒙嘉惠，增榮改觀，重價流聲。斗筲之材，徒思罄力；駑蹇之足，終慚遠致。歲在重光，律中大呂，是謂塗月，其書始就。不恥狂簡，輒用上聞，粗陳指例，式存揚搉。
 </p>
