--- a/OEBPS/Text/016.htm
+++ b/OEBPS/Text/016.htm
@@ -553,7 +553,7 @@
 <tr>
 <td>蓼夷侯孔聚</td>
 <td>以執盾前元年從起碭，以左司馬入漢，為將軍，三以都尉擊項籍，屬韓信，侯。
-                                  <p id="p61"><a class="gg-link" href="#p61" onclick="return changeColor(this);"></a><span class="style7">師古曰：「前元年，謂初起之年，即秦胡亥元年。後皆類此。擊項籍者，即楚漢春秋及史記所謂孔將軍居左者。</span>」</p></td>
+                                  <p id="p61"><a class="gg-link" href="#p61" onclick="return changeColor(this);"></a>」<span class="style7">師古曰：「前元年，謂初起之年，即秦胡亥元年。後皆類此。擊項籍者，即楚漢春秋及史記所謂孔將軍居左者。</span></p></td>
 <td>正月丙午封，三十年薨。</td>
 <td>三十</td>
 <td>孝文九年，侯臧嗣，四十五年，元朔三年，坐為太常衣冠道橋壞不得度，免。
@@ -1639,7 +1639,7 @@
 </tr>
 <tr>
 <td>共嚴侯旅罷師
-                                  <p id="p138"><a class="gg-link" href="#p138" onclick="return changeColor(this);"></a><span class="style7">師古曰：「共音恭。罷音皮彼反，又讀曰皮。</span>」</p></td>
+                                  <p id="p138"><a class="gg-link" href="#p138" onclick="return changeColor(this);"></a>」<span class="style7">師古曰：「共音恭。罷音皮彼反，又讀曰皮。</span></p></td>
 <td>以齊將漢王四年從淮陰侯起，擊項籍，又攻韓王信於平城，有功，侯，千二百戶。</td>
 <td>六月壬子封，二十六年薨。</td>
 <td>百一十四</td>
@@ -2415,7 +2415,7 @@
 </tr>
 <tr>
 <td>軑侯黎朱蒼
-                                  <p id="p190"><a class="gg-link" href="#p190" onclick="return changeColor(this);"></a><span class="style7">師古曰：「軑音大，又音第。</span>」</p></td>
+                                  <p id="p190"><a class="gg-link" href="#p190" onclick="return changeColor(this);"></a>」<span class="style7">師古曰：「軑音大，又音第。</span></p></td>
 <td>以長沙相侯，七百戶。</td>
 <td>二年四月庚子封，八年薨。</td>
 <td>百二十</td>
