--- a/OEBPS/Text/017.htm
+++ b/OEBPS/Text/017.htm
@@ -292,7 +292,7 @@
 </tr>
 <tr>
 <td>襄城侯桀龍
-                                  <p id="p18"><a class="gg-link" href="#p18" onclick="return changeColor(this);"></a><span class="style7">師古曰：「此龍蓋匈奴名耳，而說者以為龍桀，非也。</span>」</p></td>
+                                  <p id="p18"><a class="gg-link" href="#p18" onclick="return changeColor(this);"></a>」<span class="style7">師古曰：「此龍蓋匈奴名耳，而說者以為龍桀，非也。</span></p></td>
 <td>以匈奴相國降侯，四百戶。</td>
 <td>七月庚申封，三十二年，與浞野侯俱戰死事。</td>
 <td>太初三年，侯病已嗣，十五年，後二年，坐祝詛上，下獄瘐死。</td>
@@ -548,7 +548,7 @@
 </tr>
 <tr>
 <td>龍侯摎廣德
-                                  <p id="p40"><a class="gg-link" href="#p40" onclick="return changeColor(this);"></a><span class="style7">師古曰：「摎音居虯反。</span>」</p></td>
+                                  <p id="p40"><a class="gg-link" href="#p40" onclick="return changeColor(this);"></a>」<span class="style7">師古曰：「摎音居虯反。</span></p></td>
 <td>父樂以校尉擊南越死事，子侯，六百七十戶。</td>
 <td>三月壬午封，六年，坐酎金免。</td>
 <td>　</td>
@@ -693,7 +693,7 @@
 </tr>
 <tr>
 <td>蓹兒嚴侯轅終古
-                                  <p id="p50"><a class="gg-link" href="#p50" onclick="return changeColor(this);"></a><span class="style7">師古曰：「蓹音御。</span>」</p></td>
+                                  <p id="p50"><a class="gg-link" href="#p50" onclick="return changeColor(this);"></a>」<span class="style7">師古曰：「蓹音御。</span></p></td>
 <td>以軍卒斬東越徇北將軍侯。</td>
 <td>閏月癸卯封，六年，太初元年薨，亡後。</td>
 <td>　</td>
@@ -801,7 +801,7 @@
 </tr>
 <tr>
 <td>瓡讘侯杆者
-                                  <p id="p59"><a class="gg-link" href="#p59" onclick="return changeColor(this);"></a><span class="style7">師古曰：「瓡讀與狐同，讘音之涉反。</span>」</p></td>
+                                  <p id="p59"><a class="gg-link" href="#p59" onclick="return changeColor(this);"></a>」<span class="style7">師古曰：「瓡讀與狐同，讘音之涉反。</span></p></td>
 <td>以小月氏王將軍衆千騎降，侯，七百六十戶。</td>
 <td>正月乙酉封，二年薨。</td>
 <td>六月，侯勝嗣，五年，天漢二年薨，制所幸封，不得嗣。</td>
