--- a/OEBPS/Text/018.htm
+++ b/OEBPS/Text/018.htm
@@ -496,7 +496,7 @@
 <td>平丘侯王遷</td>
 <td>以光祿大夫與大將軍光定策功侯，千二百五十三戶。</td>
 <td>八月辛未封，五年，地節二年，坐平尚書聽請受臧六百萬，自殺。
-                                  <p id="p36"><a class="gg-link" href="#p36" onclick="return changeColor(this);"></a><span class="style7">如淳曰：「律，諸為人請求於吏以枉法，而事巳行，為聽行者，皆為司寇。」　師古曰：「有人私請求，而聽受之。</span>」</p></td>
+                                  <p id="p36"><a class="gg-link" href="#p36" onclick="return changeColor(this);"></a>」<span class="style7">如淳曰：「律，諸為人請求於吏以枉法，而事巳行，為聽行者，皆為司寇。」　師古曰：「有人私請求，而聽受之。</span></p></td>
 <td>　</td>
 <td>　</td>
 <td>　</td>
