--- a/OEBPS/Text/020.htm
+++ b/OEBPS/Text/020.htm
@@ -474,7 +474,7 @@
 <tr>
 <td>顓頊帝高陽氏</td>
 <td>女祿
-<span class="style7">顓頊妃，生老童</span>。</td>
+。<span class="style7">顓頊妃，生老童</span></td>
 <td>　</td>
 <td>　</td>
 <td>　</td>
