--- a/OEBPS/Text/030.htm
+++ b/OEBPS/Text/030.htm
@@ -259,7 +259,7 @@
                           容成子十四篇。<br/>
                           張蒼十六篇。<span class="style7">丞相北平侯。</span><br/>
                           鄒奭子十二篇。<span class="style7">齊人，號曰雕龍奭。</span><span class="style7">師古曰：「奭音試亦反。」</span><br/>
-                          閭丘子十三篇。<span class="style7">名快，魏人，在南公前</span>。<br/>
+                          閭丘子十三篇。。<span class="style7">名快，魏人，在南公前</span><br/>
                           馮促十三篇。<span class="style7">鄭人。</span><br/>
                           將鉅子五篇。<span class="style7">六國時。先南公，南公稱之。</span><br/>
                           五曹官制五篇。<span class="style7">漢制，似賈誼所條。</span><br/>
@@ -274,7 +274,7 @@
                           商君二十九篇。<span class="style7">名鞅，姬姓，衞後也，相秦孝公，有列傳。</span><br/>
                           申子六篇。<span class="style7">名不害，京人，相韓昭侯，終其身諸侯不敢侵韓。</span><span class="style7">師古曰：「京，河南京縣。」</span><br/>
                           處子九篇。<span class="style7">師古曰：「史記云趙有處子。」</span><br/>
-                          慎子四十二篇。<span class="style7">名到，先申韓，申韓稱之</span>。<br/>
+                          慎子四十二篇。。<span class="style7">名到，先申韓，申韓稱之</span><br/>
                           韓子五十五篇。<span class="style7">名非，韓諸公子，使秦，李斯害而殺之。</span><br/>
                           游棣子一篇。<span class="style7">師古曰：「棣音徒計反。」</span><br/>
                           鼂錯三十一篇。<br/>
@@ -350,10 +350,10 @@
                           鬻子說十九篇。<span class="style7">後世所加。</span><br/>
                           周考七十六篇。<span class="style7">考周事也。</span><br/>
                           青史子五十七篇。<span class="style7">古史官記事也。</span><br/>
-                          師曠六篇。<span class="style7">見春秋，其言淺薄，本與此同，似因託之</span>。<br/>
+                          師曠六篇。。<span class="style7">見春秋，其言淺薄，本與此同，似因託之</span><br/>
                           務成子十一篇。<span class="style7">稱堯問，非古語。</span><br/>
                           宋子十八篇。<span class="style7">孫卿道宋子，其言黃老意。</span><br/>
-                          天乙三篇。<span class="style7">天乙謂湯，其言非殷時，皆依託也</span>。<br/>
+                          天乙三篇。。<span class="style7">天乙謂湯，其言非殷時，皆依託也</span><br/>
                           黃帝說四十篇。<span class="style7">迂誕依託。</span><br/>
                           封禪方說十八篇。<span class="style7">武帝時。</span><br/>
                           待詔臣饒心術二十五篇。<span class="style7">武帝時。</span><span class="style7">師古曰：「劉向別錄云饒齊人也，不知其姓，武帝時待詔，作書名曰心術也。」</span><br/>
